correct styling of comment card on smaller screensize

--- a/src/App.css
+++ b/src/App.css
@@ -3,85 +3,85 @@
   background-image: url(https://www.bhmpics.com/downloads/newspaper-background/62.360_f_307201913_pcsbch4faog4re3s4j8okcmyxaubfvku.jpg);
 }
 
-*{
+* {
   padding: 0;
   margin: 0;
 }
 
-.input-field{
-    width: 100%;
-    height: 150px;
-    padding: 12px 20px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-    resize: none;
+.input-field {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
 }
 
-.submitbutton{
+.submitbutton {
   width: 200px;
-    height: 70px;
-    border: solid;
-    border-width: 2px;
-    background-color: white;
-    border-color: green;
-    font-size: 30px;
-    border-radius: 40px;
-    text-align: center;
-    box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
+  height: 70px;
+  border: solid;
+  border-width: 2px;
+  background-color: white;
+  border-color: green;
+  font-size: 30px;
+  border-radius: 40px;
+  text-align: center;
+  box-shadow: 0 6px 20px -5px rgba(0, 0, 0, 0.4);
 }
 
-.submitbuttoninactive{
+.submitbuttoninactive {
   width: 200px;
-    height: 70px;
-    border: solid;
-    border-width: 2px;
-    background-color: white;
-    border-color: red;
-    font-size: 30px;
-    border-radius: 40px;
-    text-align: center;
-    box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
+  height: 70px;
+  border: solid;
+  border-width: 2px;
+  background-color: white;
+  border-color: red;
+  font-size: 30px;
+  border-radius: 40px;
+  text-align: center;
+  box-shadow: 0 6px 20px -5px rgba(0, 0, 0, 0.4);
 }
 
-.deletebutton{
-    width: 200px;
-      height: 50px;
-      border: solid;
-      border-width: 2px;
-      border-color: red;
-      font-size: 20px;
-      border-radius: 40px;
-      text-align: center;
-      box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
+.deletebutton {
+  width: 200px;
+  height: 50px;
+  border: solid;
+  border-width: 2px;
+  border-color: red;
+  font-size: 20px;
+  border-radius: 40px;
+  text-align: center;
+  box-shadow: 0 6px 20px -5px rgba(0, 0, 0, 0.4);
 }
 
-#mainheader{
- font-weight: bolder;
- font-size: 100px;
+#mainheader {
+  font-weight: bolder;
+  font-size: 100px;
 }
 
-#greeting{
+#greeting {
   font-size: 20px;
 }
 
-#navbar{
-  font-size: 30px
+#navbar {
+  font-size: 30px;
 }
 
-nav{
+nav {
   margin: 8px;
 }
 
-#articleslist{
+#articleslist {
   max-width: 100vw;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-#singlearticlebody{
+#singlearticlebody {
   margin: 2rem;
   margin-top: 0rem;
   display: grid;
@@ -89,87 +89,85 @@ nav{
   justify-items: center;
 }
 
-#commentlist{
+#commentlist {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-#commentcard{
+#commentcard {
   margin: 15px;
   padding: 25px;
   width: 60vw;
-  background-color:rgba(137, 138, 137, 0.177);
+  background-color: rgba(137, 138, 137, 0.177);
   border: double;
-  border-color:black;
+  border-color: black;
   font-size: 25px;
   border-radius: 40px;
   text-align: center;
-  box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
+  box-shadow: 0 6px 20px -5px rgba(0, 0, 0, 0.4);
 }
 
-
-
-#articlecard{
+#articlecard {
   max-width: 290px;
   margin: 15px;
   padding: 0px;
 }
 
-.articlelistimg{
+.articlelistimg {
   max-width: 80%;
 }
 
-.singlearticleimg{
+.singlearticleimg {
   max-width: 80%;
   margin: 1rem;
   margin-top: 0;
   border-radius: 5px;
 }
 
-.stamp{
-font-weight: bold;
-font-size: 14px;
+.stamp {
+  font-weight: bold;
+  font-size: 14px;
 }
 
-.votes{
+.votes {
   font-size: 1.5rem;
   margin-left: 10px;
   font-weight: bold;
 }
 
-.up{
+.up {
   font-size: 20px;
-  color:blue;
+  color: blue;
 }
 
-.down{
+.down {
   font-size: 20px;
   color: red;
 }
 
-.undo{
+.undo {
   color: red;
   border: 0;
 }
 
-article{
+article {
   max-width: 60vw;
   font-size: 25px;
   margin: 8px;
 }
 
-.error{
+.error {
   color: red;
   font-weight: bold;
 }
 
-#dropdown{
- padding: 20px;
- margin-top: 10px;
+#dropdown {
+  padding: 20px;
+  margin-top: 10px;
 }
 
-form{
+form {
   padding: 30px;
   font-size: 20px;
 }
@@ -178,27 +176,40 @@ input[type="radio"] {
   margin-right: 10px;
 }
 
-@media all and (max-width: 680px) {
-  #articlecard{
+@media (max-width: 680px) {
+  #articlecard {
     min-width: 80vw;
     margin: 15px;
     padding: 0px;
   }
 
-  .deletebutton{
-    width: 150px;
-      height: 40px;
-      border: solid;
-      border-width: 2px;
-      border-color: red;
-      font-size: 15px;
-      border-radius: 40px;
-      text-align: center;
-      box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
-}
+  #commentcard {
+    margin: 15px;
+    padding: 25px;
+    width: 90vw;
+    background-color: rgba(137, 138, 137, 0.177);
+    border: double;
+    border-color: black;
+    font-size: 25px;
+    border-radius: 40px;
+    text-align: center;
+    box-shadow: 0 6px 20px -5px rgba(0, 0, 0, 0.4);
+  }
 
-.submitbutton{
-  width: 150px;
+  .deletebutton {
+    width: 150px;
+    height: 40px;
+    border: solid;
+    border-width: 2px;
+    border-color: red;
+    font-size: 15px;
+    border-radius: 40px;
+    text-align: center;
+    box-shadow: 0 6px 20px -5px rgba(0, 0, 0, 0.4);
+  }
+
+  .submitbutton {
+    width: 150px;
     height: 50px;
     border: solid;
     border-width: 2px;
@@ -208,11 +219,11 @@ input[type="radio"] {
     font-size: 25px;
     border-radius: 40px;
     text-align: center;
-    box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
-}
+    box-shadow: 0 6px 20px -5px rgba(0, 0, 0, 0.4);
+  }
 
-.submitbuttoninactive{
-  width: 150px;
+  .submitbuttoninactive {
+    width: 150px;
     height: 50px;
     border: solid;
     border-width: 2px;
@@ -222,44 +233,33 @@ input[type="radio"] {
     font-size: 25px;
     border-radius: 40px;
     text-align: center;
-    box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
-}
+    box-shadow: 0 6px 20px -5px rgba(0, 0, 0, 0.4);
+  }
 
-  article{
+  article {
     max-width: 90vw;
     font-size: 20px;
     margin: 8px;
   }
 
-  #commentcard{
-    background-color:rgba(137, 138, 137, 0.177);
-    margin: 15px;
-    padding: 25px;
-    width: 80vw;
-    border: solid;
-    border-color: red;
-    font-size: 15px;
-    border-radius: 40px;
-    text-align: center;
-    box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
-  }
+ 
 }
 
-@media all and (min-width: 1000px) {
-  #mainheader{
+@media (min-width: 1000px) {
+  #mainheader {
     font-weight: bolder;
     font-size: 200px;
-   }
+  }
 
-   .input-field{
+  .input-field {
     max-width: 80%;
-}
+  }
 
-   #greeting{
+  #greeting {
     font-size: 30px;
   }
 
-  form{
+  form {
     padding: 10px;
     font-size: 30px;
   }
@@ -270,36 +270,40 @@ input[type="radio"] {
   }
 }
 
-#dropdowncontainer{
-  display:flex;
+#dropdowncontainer {
+  display: flex;
   justify-content: center;
   align-content: center;
   gap: 10px;
 }
 
-@media all and (max-width: 580px) {
-  #dropdowncontainer{
-    display:flex;
+@media (max-width: 580px) {
+  #dropdowncontainer {
+    display: flex;
     justify-content: center;
     align-content: center;
     flex-direction: column;
     gap: 1px;
   }
 
-  #dropdown{
+  #dropdown {
     padding: 5px;
     padding-bottom: 0px;
-   }
+  }
 
-   form{
+  form {
     padding: 10px;
   }
 
-  #mainheader{
+  #mainheader {
     font-weight: bolder;
     font-size: 80px;
-   }
+  }
 
- 
+  #articlecard {
+    min-width: 80vw;
+    margin: 15px;
+    padding: 0px;
+  }
 
 }
